--- a/templates/accounts/patient_dashboard.html
+++ b/templates/accounts/patient_dashboard.html
@@ -14,5 +14,12 @@
             <img src="{{ profile.profile_picture.url }}" alt="Profile Picture" class="img-thumbnail mt-2" width="150">
         {% endif %}
     </div>
+
+    <div class="card p-4 shadow mt-4">
+            <h4>Explore Blogs</h4>
+            <p>Read helpful articles from doctors.</p>
+            <a href="{% url 'blog_list' %}" class="btn btn-primary">View Blogs</a>
+    </div>
+
 </div>
 {% endblock %}
