--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,57 @@
     <title>{% block title %}My App{% endblock %}</title>
 <!-- Bootstrap CDN for Styling -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-</head>
+    <style>
+      /* Inputs */
+      .form-control, .form-select {
+          border-radius: 10px;
+          border: 1px solid #ced4da;
+          transition: all 0.3s ease-in-out;
+          box-shadow: inset 0 1px 2px rgba(0,0,0,0.05);
+      }
+      .form-control:focus, .form-select:focus {
+          border-color: #0d6efd;
+          box-shadow: 0 0 6px rgba(13, 110, 253, 0.4);
+      }
+
+      /* Labels */
+      .form-label {
+          font-size: 0.95rem;
+          color: #495057;
+          letter-spacing: 0.5px;
+      }
+
+      /* Button gradient */
+      .btn-gradient {
+                  background: linear-gradient(90deg, #3b3737ff, #54637aff);
+
+
+        {% comment %} background: linear-gradient(90deg, #0d6efd, #6610f2); {% endcomment %}
+        color: #fff;
+        border: none;
+        border-radius: 30px;
+        transition: 0.3s;
+      }
+      
+      .btn-gradient:hover {
+          background: linear-gradient(90deg, #3b3737ff, #54637aff);
+          transform: translateY(-2px);
+      }
+
+      /* Title & Image ek line me */
+
+      .custom-file-input input[type="file"] {
+          width: 45%;        
+          border: 1px solid #ced4da;
+          border-radius: 6px;
+          background-color: #f8f9fa;
+          cursor: pointer;
+      }
+
+    </style>
+
+
+  </head>
 <body>
 
 <!-- Navbar -->
@@ -21,9 +71,17 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         {% if user.is_authenticated %}
-          <li class="nav-item">
-            <a class="nav-link" href="#">Welcome, {{ user.username }}</a>
-          </li>
+        
+        <!-- Welcome text -->
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">Welcome, {{ user.username }}</a>
+        </li>
+        
+        <!-- Dashboard link -->
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
+        </li>
+          <!-- Logout -->
           <li class="nav-item">
             <a class="nav-link" href="{% url 'logout' %}">Logout</a>
           </li>
@@ -40,6 +98,7 @@
   </div>
 </nav>
 
+
 <!-- 🔹 Page Content -->
 <div class="container mt-4">
   {% block content %}
@@ -49,3 +108,4 @@
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </html>
+{% comment %} blogs add kr rhe the {% endcomment %}
